[feat] role redis 개선